<resources>
    <string name="app_name">APIExplorer</string>
    <string name="textEmail">Email: </string>
    <string name="textToken">Token: </string>
    <string name="textName">Name:</string>
    <string name="textLastName">Last name: </string>
    <string name="textPassword">Password: </string>
    <string name="buttonName">Generate data</string>
    <string name="textImage">"Image Shop "</string>
    <string name="appName">APIExplorer</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="singInButton">SIGN IN</string>
    <string name="signUpButton">SIGN UP</string>
    <string name="registerEmail">Email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="registerName">Name</string>
    <string name="registerLastName">Last name</string>
    <string name="registerPassword">Password</string>
    <string name="registerConfirmPassword">Confirm password</string>
    <string name="registerCellphone">Cellphone</string>
    <string name="imageLogo">Logo</string>
    <string name="registerButton">REGISTER</string>
    <string name="welcome">Welcome: %s</string>
    <string name="last_update">Last update: %s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ItemImageDescription">OK</string>
    <string name="rickAndMortyButton">RickAndMorty</string>
    <string name="digimonButton">Digimon</string>
</resources>