<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/registerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/imageLogo"/>

        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/registerName"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerImage" />

        <EditText
            android:id="@+id/registerLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/registerLastName"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerName" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/registerEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerLastName" />

        <EditText
            android:id="@+id/registerConfirmEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerEmail"/>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/registerPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmEmail"/>

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/registerConfirmPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerPassword"/>

        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/registerCellphone"
            android:inputType="phone"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmPassword"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPhone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>